# BionoteEchos

./: .gitignore  CMakeLists.txt  README.md
docs/: ARCHITECTURE.md  CHANGELOG.md  CONCLUSAO_QMEDIAPLAYER.md  CONVENCOES.md  CORRECAO_DOUBLE_FREE.md  CORRECOES_CACHE_E_PERFORMANCE.md  CORRECOES_FFT_E_THREADING.md  CUSTOM_AUDIO_PLAYER.md  DEVELOPMENT.md  DIAGNOSTICO_AUDIO.md  DIAGNOSTICO_ESTABILIDADE.md  ENTREGA.md  ESPECIFICACAO_COMPLETA.md  ESPECTROGRAMA.md  IMPLEMENTACAO_LISTA_ARQUIVOS.md  INDEX.md  MELHORIAS_AUDACITY.md  MELHORIAS_VISUALIZACAO.md  ORGANIZACAO.md  OTIMIZACOES_ESPECTROGRAMA.md  PROBLEMA_REPRODUCAO.md  RESUMO_ESPECIFICACAO.md  SALVAMENTO_PROJETO.md  SCRIPTS.md  SINCRONIZACAO_E_CACHE.md  TESTE_ABERTURA_AUDIO.md  TODO.md
include/audio/: AudioDecoder.h  AudioDecoderWorker.h  AudioPlayer.h  CustomAudioPlayer.h  IntensityCalculator.h  PitchDetector.h  SpectrogramCalculator.h  SpectrogramWidget.h
include/controllers/: AnnotationController.h  AudioController.h  ProjectController.h
include/models/: AnnotationInterval.h  AnnotationPoint.h  AnnotationTier.h  AudioFile.h  Project.h
include/utils/: Logger.h  TextGridExporter.h  TextGridImporter.h
include/views/: AboutDialog.h  AnnotationLayerWidget.h  AudioControlWidget.h  AudioListWidget.h  AudioMetadataDialog.h  AudioVisualizationWidget.h  CompositeVisualizationWidget.h  MainWindow.h  SpectrogramSettingsDialog.h  SpectrogramWidget.h  TimeEdit.h  WaveformWidget.h
resources/: resources.qrc
scripts/: build.sh  install-deps.sh  quick-build.sh  test_stability.sh
src/: main.cpp
src/audio/: AudioDecoder.cpp  AudioDecoderWorker.cpp  AudioPlayer.cpp  CustomAudioPlayer.cpp  IntensityCalculator.cpp  PitchDetector.cpp  SpectrogramCalculator.cpp  SpectrogramWidget.cpp
src/controllers/: AnnotationController.cpp  AudioController.cpp  ProjectController.cpp
src/models/: AnnotationInterval.cpp  AnnotationPoint.cpp  AnnotationTier.cpp  AudioFile.cpp  Project.cpp
src/utils/: Logger.cpp  TextGridExporter.cpp  TextGridImporter.cpp
src/views/: AboutDialog.cpp  AnnotationLayerWidget.cpp  AudioControlWidget.cpp  AudioListWidget.cpp  AudioMetadataDialog.cpp  AudioVisualizationWidget.cpp  MainWindow.cpp  SpectrogramSettingsDialog.cpp  SpectrogramWidget.cpp  TimeEdit.cpp
translations/: AudioAnnotator_pt_BR.ts
